--- a/system-parking/Dockerfile
+++ b/system-parking/Dockerfile
@@ -1,4 +1,9 @@
-FROM ubuntu:latest
-LABEL authors="Dev-lucas"
+FROM eclipse-temurin:21-jre
 
-ENTRYPOINT ["top", "-b"]
+WORKDIR /app
+
+COPY target/app.jar app.jar
+
+EXPOSE 8080
+
+ENTRYPOINT ["java", "-jar", "app.jar"]
