--- a/system-parking/Dockerfile
+++ b/system-parking/Dockerfile
@@ -6,4 +6,4 @@ COPY target/app.jar app.jar
 
 EXPOSE 8080
 
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "system-parking.jar"]
