--- a/system-parking/Dockerfile
+++ b/system-parking/Dockerfile
@@ -2,8 +2,8 @@ FROM eclipse-temurin:21-jre
 
 WORKDIR /app
 
-COPY target/system-parking.jar system-parking.jar
+COPY target/app.jar app.jar
 
 EXPOSE 8080
 
-ENTRYPOINT ["java", "-jar", "system-parking.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
